# drone

./: .gitignore  README.md  main.py  pyproject.toml  script.sh  test.py
conf/: drone.json  local.json  settings.json
src/: __init__.py  b64.py  config.py  data.py  drone_controller.py  level_manager.py  models.py  ui.py  utils.py  vfx.py  vr_simulator.py
src/assets/models/: fpv_drone.glb
tests/: test_practice_1.py
