[project]
name = "drone"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "panda3d>=1.10.16",
    "panda3d-gltf>=1.3.0",
    "panda3d-openxr>=0.1.2",
    "ruff>=0.15.9",
]

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["I001"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
